--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
           <h1>Find Your New Bestie</h1>
           <p class="intro-text">
             The most amazing list of adoptable pets at your fingertips. Updated
-            fresh daily.
+            fresh daily!
           </p>
           <div class="intro-buttons">
             <a href="#" class="our-btn utility-mr">View Pets</a>
