Changed page title and added smooth scroll

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Our Cool Title</title>
+    <title>Pet Adoption Center</title>
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -24,7 +24,7 @@
             fresh daily!
           </p>
           <div class="intro-buttons">
-            <a href="#" class="our-btn utility-mr">View Pets</a>
+            <a href="#view-pets" class="our-btn utility-mr">View Pets</a>
             <a href="#" class="our-btn our-btn--outline">Manage Pets</a>
           </div>
 
@@ -149,7 +149,7 @@
       </div>
     </div>
 
-    <div class="page-section">
+    <div class="page-section" id="view-pets">
       <div class="page-section-inner">
         <h2 class="page-section-title">Meet Our Friends</h2>
         <div class="pet-filter">
@@ -221,7 +221,7 @@
     </div>
 
     <footer class="site-footer">
-      <p>&copy; 2023 Fake Adoption Center. All rights reserved.</p>
+      <p>&copy; 2024 Fake Adoption Center. All rights reserved.</p>
     </footer>
   </body>
 </html>
