--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
     </div>
 
     <footer class="site-footer">
-      <p>&copy; 2024 Fake Adoption Center. All rights reserved!!!</p>
+      <p>&copy; 2024 Fake Adoption Center. All rights reserved.</p>
     </footer>
   </body>
 </html>
