--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
               <h2>Sunny Play</h2>
               <p>
                 Our center is located in beautiful Miami, and it&rsquo;s
-                currently <span></span>°F at our pet playground.
+                currently <span id="temperature-output"></span>°F at our pet playground.
               </p>
             </div>
 
@@ -222,5 +222,7 @@
     <footer class="site-footer">
       <p>&copy; 2024 Fake Adoption Center. All rights reserved!!!</p>
     </footer>
+
+    <script src="main.js"></script>
   </body>
 </html>
