--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
         <h2 class="page-section-title">Meet Our Friends</h2>
         <div class="pet-filter">
           <p>
-            Show me: <button>All Pets</button> <button>Only Dogs</button>
+            Show me: <button class="active">All Pets</button> <button>Only Dogs</button>
             <button>Only Cats</button>
           </p>
         </div>
